--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,62 @@
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  line-height: 1.5;
+  padding: 0;
+  margin: 0;
+  background-color: #f4f4f4;
+}
 
+/* container divs */
+.container {
+  width: 80%; /* responsive width */
+  margin: auto; /* use margin auto for percentage width */
+  overflow: hidden;
+}
+
+/* all ul's */
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+/* header */
+header {
+  background-color: #35424a;
+  color: #e8491d;
+  padding-top: 15px;
+  min-height: 70px;
+  border-bottom: #e8491d 3px solid;
+}
+
+/* header links */
+header a {
+  color: #fff;
+  text-decoration: none; /*removes underline on links */
+  text-transform: uppercase;
+  font-size: 16px;
+}
+
+/* header list items */
+header li {
+  float: left;
+  display: inline;
+  padding: 0 20px 0 20px;
+}
+
+header #branding {
+  float: left;
+}
+
+header #branding h1 {
+  margin: 0;
+}
+header nav {
+  float: right;
+  margin-top: 10px;
+}
+
+header .highlight, header .current a{
+  color: #e8491d;
+  font-weight: bold;
+}
