--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ body {
   margin: 0;
   background-color: #f4f4f4;
 }
-
+/* global styling */
 /* container divs */
 .container {
   width: 80%; /* responsive width */
@@ -72,7 +72,7 @@ header a:hover {
   color: #ccc;
 }
 
-/* Showcase (main body content styling) */
+/* showcase (main body content styling) */
 #body-content {
   min-height: 400px;
   background: url('../img/bg4.jpg') no-repeat 0 -600px;
@@ -80,7 +80,7 @@ header a:hover {
   color: #fff;
 }
 
-/* Showcase h1 styling */
+/* showcase h1 styling */
 #body-content h1 {
   margin-top: 100px;
   font-size: 55px;
@@ -88,7 +88,46 @@ header a:hover {
   font-weight: bold;
 }
 
-/* Showcase paragraph styling */
+/* showcase paragraph styling */
 #body-content p {
   font-size: 20px;
+}
+
+/* newsletter section styling */
+#newsletter {
+  padding: 15px;
+  background-color: #35424a;
+}
+
+/* newsletter h1 styling */
+#newsletter h2 {
+  float: left;
+  color: #fff;
+}
+
+/* newsletter subscribe form styling */
+#newsletter form {
+  float: right;
+  margin-top: 30px;
+}
+
+/* style email input box */
+#newsletter input[type="email"] {
+  padding: 15px;
+  height: 25px;
+  width: 250px;
+  border-radius: 2px;
+  padding-left: 2px; /*  set this to put placeholder in correct position due to padding */
+}
+
+/* subscribe button styling */
+.subscribe_button {
+  height: 34px;
+  width: 100px;
+  background-color: #e8491d;
+  border: none;
+  padding-left: 20;
+  padding-right: 20;
+  color: #fff;
+  border-radius: 2px;
 }
