--- a/css/styles.css
+++ b/css/styles.css
@@ -149,3 +149,12 @@ header a:hover {
 #boxes .box img {
   width: 90px;
 }
+
+/* footer styling */
+footer {
+  padding: 25px;
+  margin-top: 20px;
+  color: #fff;
+  background-color: #e8491d;
+  text-align:center;
+}
