--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,7 @@ body {
 ul {
   margin: 0;
   padding: 0;
+  list-style: none;
 }
 
 /* images section */
@@ -142,6 +143,63 @@ header a:hover {
   padding-right: 20;
   color: #fff;
   border-radius: 2px;
+}
+
+/* quote button styling, services page */
+.quote_button {
+  height: 34px;
+  width: 89%;
+  background-color: #e8491d;
+  border: none;
+  padding-left: 25;
+  padding-right: 20;
+  color: #fff;
+  border-radius: 2px;
+  margin-left: 3px;
+}
+
+/* sidebar quote button div styling, services page */
+.sidebar-quote-button {
+  text-align: center;
+}
+
+/* text style on sidebar title, services page */
+.sidebar-quote-title {
+  font-weight: bold;
+  text-align: center;
+}
+
+/* sidebar message div styling */
+.sidebar-message {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+/* style input field divs on services page */
+.sidebar-name-field, .sidebar-email-field, .sidebar-message, .quote_button {
+  text-align: center;
+  padding: 5px;
+}
+
+/* input fields styling on services page */
+.side-name, .side-email, .side-message {
+  width: 92%;
+  margin-left: 3px;
+}
+
+/* sidebar styling in services page */
+.services-dark { /* if attaching the id, place it as one word: aside#id */
+  padding: 5px 20px 35px 20px;
+  background-color: #35424a;
+  color: #fff;
+}
+
+/* styling the list of services, on services page */
+ul#services li {
+  padding: 20px;
+  border: #ccc solid 1px;
+  margin-bottom: 5px;
+  background-color: #e6e6e6;
 }
 
 /* styling for the three boxes*/
