--- a/css/styles.css
+++ b/css/styles.css
@@ -248,6 +248,41 @@ footer {
 }
 
 /* get rid of bottom margin on footer paragraph */
-footer p{
+footer p {
   margin-bottom: 0px;
+}
+
+/* media queries */
+
+@media(max-width: 768px) { /* anything in this query will only run on screens of 768px or less */
+  header #branding,
+  header nav,
+  header nav li,
+  #newsletter h1,
+  #newsletter form,
+  #boxes .box,
+  article#main-col,
+  aside#sidebar {
+    float: none;
+    text-align: center;
+    width: 100%;
+  }
+
+  header {
+    padding-bottom: 20px;
+  }
+
+  #body-content h1 {
+    margin-top: 40px;
+  }
+
+  #newsletter button {
+    display: block;
+    width: 100%;
+  }
+
+  #newsletter form input[type="email"] {
+    width: 100%;
+    margin-bottom: 5px;
+  }
 }
