--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,35 @@ body {
   color: #fff;
 }
 
+/*
+******************************
+  all menu bar divs and styles
+******************************
+*/
+
+/* Rotate top bar */
+.change .b1 {
+    -webkit-transform: rotate(-45deg) translate(-9px, 6px) ;
+    transform: rotate(-45deg) translate(-9px, 6px) ;
+}
+
+/* Fade out the second bar */
+.change .b2 {
+    opacity: 0;
+}
+
+/* Rotate bottom bar */
+.change .b3 {
+    -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
+    transform: rotate(45deg) translate(-8px, -8px) ;
+}
+
+/*
+*********************************
+  end of menu bar divs and styles
+*********************************
+*/
+
 /* all ul's */
 ul {
   margin: 0;
@@ -252,10 +281,13 @@ footer {
 footer p {
   margin-bottom: 0px;
 }
-
-/* media queries */
-
-@media(max-width: 768px) { /* anything in this query will only run on screens of 768px or less */
+/*
+*************************
+      media queries
+*************************
+*/
+/* anything in this query will run only on screens of 768px or less */
+@media(max-width: 768px) {
   header #branding,
   header nav,
   header nav li,
@@ -285,5 +317,40 @@ footer p {
   #newsletter form input[type="email"] {
     width: 100%;
     margin-bottom: 5px;
+  }
+}
+
+/* mobile media query */
+@media only screen and (max-width: 480px) {
+  /* position menu bars */
+  .menu-container {
+    display: inline-block;
+    cursor: pointer;
+    float: right;
+  }
+
+  /* set up menu bar styles */
+  .b1, .b2, .b3 {
+      width: 35px;
+      height: 5px;
+      background-color: #fff;
+      margin: 6px 0;
+      transition: 0.4s;
+  }
+
+  /* style menu items to take up their own line on mobile */
+  ul.clearfix.menu {
+    width: 30%;
+  }
+
+  /* initial height of the menu is 0 until it's clicked */
+  .menu {
+    height: 0;
+    transition: height 0.3s;
+  }
+
+  /* set the height when the menu is clicked */
+  .open {
+    height: 75px;
   }
 }
