--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ body {
 /* Rotate top bar */
 .change .b1 {
     -webkit-transform: rotate(-45deg) translate(-9px, 6px) ;
-    transform: rotate(-45deg) translate(-9px, 6px) ;
+    transform: rotate(-45deg) translate(-5px, 6px) ;
 }
 
 /* Fade out the second bar */
@@ -42,7 +42,7 @@ body {
 /* Rotate bottom bar */
 .change .b3 {
     -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
-    transform: rotate(45deg) translate(-8px, -8px) ;
+    transform: rotate(45deg) translate(-7px, -8px) ;
 }
 
 /*
@@ -83,8 +83,7 @@ header a {
 /* header list items */
 header li {
   float: left;
-  display: inline;
-  padding: 0 20px 0 20px;
+  padding: 0 10px 0 25px;
 }
 
 /* move branding to the left */
@@ -118,7 +117,7 @@ header a:hover {
 #body-content {
   min-height: 400px;
   background: url('../img/bg4.jpg') no-repeat 0 -500px;
-  -webkit-filter:grayscale(100%); /* gray out picture to make text mroe visible */
+  -webkit-filter:grayscale(100%); /* gray out picture to make text more visible */
   text-align: center;
   color: #fff;
 }
@@ -324,33 +323,41 @@ footer p {
 @media only screen and (max-width: 480px) {
   /* position menu bars */
   .menu-container {
-    display: inline-block;
+    display: block;
     cursor: pointer;
-    float: right;
+    padding: 5px;
+    width: 35px; /* set div width to be the similar to the menu bars width */
+    margin-bottom: 6px;
   }
 
   /* set up menu bar styles */
   .b1, .b2, .b3 {
-      width: 35px;
-      height: 5px;
+      width: 30px;
+      height: 3px;
       background-color: #fff;
       margin: 6px 0;
-      transition: 0.4s;
+      transition: 0.3s;
   }
 
   /* style menu items to take up their own line on mobile */
-  ul.clearfix.menu {
+  /*ul.clearfix.menu {
     width: 30%;
-  }
+  }*/
 
-  /* initial height of the menu is 0 until it's clicked */
+  /* change initial height of the menu until hamburger is clicked */
   .menu {
     height: 0;
-    transition: height 0.3s;
+    transition: height 0.6s;
   }
 
   /* set the height when the menu is clicked */
   .open {
-    height: 75px;
+    /*width: 100%;*/
+    height: 90px;
+  }
+
+  /* change padding on mobile */
+  header li {
+    padding: 0 53px 0 1px;
   }
 }
