--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,13 @@ body {
   margin-top: 20px;
 }
 
+
+/*
+**************************
+*     header styling     *
+**************************
+*/
+
 /* header */
 header {
   background-color: #35424a;
@@ -70,23 +77,15 @@ header {
   border-bottom: #e8491d 3px solid;
 }
 
-/*
-**************************
-*     header styling     *
-**************************
-*/
 /* header links */
-header a {
+a.btn-primary.btn-block {
   color: #fff;
+  font-weight: bold;
   text-decoration: none; /*removes underline on links */
   text-transform: uppercase;
   font-size: 16px;
-}
-
-/* header list items */
-header li {
-  float: left;
-  padding: 0 10px 0 25px;
+  background-color: #35424a;
+  border: none;
 }
 
 /* all ul's */
@@ -96,9 +95,10 @@ ul {
   list-style: none;
 }
 
-/* move branding to the left */
-header #branding {
-  float: left;
+/* remove list item button padding in header */
+.list-inline>li {
+  padding-right: 0;
+  padding-left: 0;
 }
 
 /* set margin of welcome message h1 */
@@ -113,7 +113,7 @@ header nav {
 }
 
 /* current page color, welcome span color */
-header .highlight, header .current a{
+header .highlight {
   color: #e8491d;
   font-weight: bold;
 }
@@ -121,6 +121,11 @@ header .highlight, header .current a{
 /* link color on hover */
 header a:hover {
   color: #ccc;
+}
+
+/* remove padding for header items */
+div.col-xs-6 {
+  padding: 0;
 }
 
 /*
@@ -156,6 +161,7 @@ header a:hover {
 *    newsletter styling    *
 ****************************
 */
+
 /* newsletter section styling */
 #newsletter {
   padding: 15px;
@@ -351,13 +357,13 @@ footer p {
 
 /* mobile media query */
 @media only screen and (max-width: 480px) {
-  /* position menu bars */
+  /* set menu bar div styles */
   .menu-container {
     display: block;
     cursor: pointer;
     padding: 5px;
     width: 35px; /* set div width to be the similar to the menu bars width */
-    margin-bottom: 6px;
+    margin-bottom: 10px;
   }
 
   /* set up menu bar styles */
@@ -369,19 +375,36 @@ footer p {
       transition: 0.3s;
   }
 
-  /* change initial height of the menu until hamburger is clicked */
-  .menu {
+  /* move menu bars to the left on mobile */
+  div.col-xs-6 {
+    width: 100%; /* set buttons to take up their own row */
+    margin-left: 15px; /* center header content on mobile */
+  }
+
+  /* change initial height of the ul until hamburger is clicked */
+  .list-inline {
     height: 0;
     transition: height 0.6s;
   }
 
+  /* space between buttons in header on mobile */
+  .list-inline>li {
+    margin-bottom: 5px;
+  }
+
   /* set the height when the menu is clicked */
   .open {
-    height: 90px;
+    height: 160px;
   }
 
   /* change padding on mobile */
   header li {
     padding: 0 53px 0 1px;
+  }
+
+  /*  change color for buttons on mobile */
+  a.btn.btn-primary.btn-block {
+      background-color: #4a4735;
+      font-weight: bold;
   }
 }
