--- a/css/styles.css
+++ b/css/styles.css
@@ -210,8 +210,6 @@ div.col-xs-6 {
   width: 110px;
   background-color: #e8491d;
   border: none;
-  /*padding-left: 20;*/
-  /*padding-right: 20;*/
   color: #fff;
   border-radius: 2px;
   margin-left: 5px;
@@ -223,11 +221,14 @@ div.col-xs-6 {
   width: 89%;
   background-color: #e8491d;
   border: none;
-  padding-left: 25;
-  padding-right: 20;
   color: #fff;
   border-radius: 2px;
   margin-left: 3px;
+}
+
+/* set color for form input fields */
+.quote {
+  color: black;
 }
 
 /* sidebar quote button div styling, services page */
