--- a/css/styles.css
+++ b/css/styles.css
@@ -564,6 +564,12 @@ footer p {
   #newsletter button {
     display: inline;
   }
+
+  /* move modal close button on mobile */
+  span.close {
+      position: absolute;
+      right: 32%;
+  }
 }
 
 /*
@@ -657,13 +663,6 @@ footer p {
     color: #fff;
     text-decoration: none;
     cursor: pointer;
-}
-
-/* 100% Image Width on Smaller Screens */
-@media only screen and (max-width: 700px){
-    .modal-content {
-        width: 100%;
-    }
 }
 
 /*
