--- a/css/styles.css
+++ b/css/styles.css
@@ -613,8 +613,11 @@ footer p {
 .modal-content {
     margin: auto;
     display: block;
-    width: 80%;
     max-width: 700px;
+}
+
+img#img01.modal-content {
+  width: 200px;
 }
 
 /* Caption of Modal Image (Image Text) - Same Width as the Image */
@@ -650,12 +653,14 @@ footer p {
 /* The Close Button */
 .close {
     position: absolute;
-    top: 50px;
-    right: 44%;
+    top: 10%;
+    right: 40%;
     color: #fff;
     font-size: 40px;
     font-weight: bold;
-    transition: 0.3s;
+    /*transition: 1s;*/
+    animation-name: zoom;
+    animation-duration: 0.6s;
 }
 
 .close:hover,
