--- a/css/styles.css
+++ b/css/styles.css
@@ -592,90 +592,63 @@ footer {
 ******************************
 */
 
-
 /* Style the Image Used to Trigger the Modal */
-#myImg {
-    border-radius: 5px;
+.myImg {
     cursor: pointer;
     transition: 0.3s;
+    width: 90px;
 }
 
-#myImg:hover {opacity: 0.7;}
-
-/* The Modal (background) */
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+/* set styling for images on hover */
+.myImg:hover {
+  opacity: 0.7;
+  border-radius: 5px;
 }
 
 /* Modal Content (Image) */
 .modal-content {
-    margin: auto;
-    display: block;
-    max-width: 700px;
+  background-color: #fff;
+  margin: auto;
+  display: block;
+  max-width: 700px;
 }
 
-img#img01.modal-content {
-  width: 200px;
+/* set styles on images that appear in the modal */
+.showimage {
+  display: block;
+  margin: auto;
+  /* give same border radius as hover state */
+  border-radius: 5px;
 }
 
-/* Caption of Modal Image (Image Text) - Same Width as the Image */
-#caption {
-    margin: auto;
-    display: block;
-    width: 80%;
-    max-width: 700px;
-    text-align: center;
-    color: #ccc;
-    padding: 10px 0;
-    height: 150px;
+/* set styles for modal footer */
+.modal-footer {
+  border: none;
+}
+
+/* set styles for close button on modal */
+.close_button {
+  width: 40%;
+  /* display: block is handled through bootstrap class assigned to the element: btn-block */
+  margin: auto;
 }
 
 /* Add Animation - Zoom in the Modal */
-.modal-content, #caption {
-    -webkit-animation-name: zoom;
-    -webkit-animation-duration: 0.6s;
-    animation-name: zoom;
-    animation-duration: 0.6s;
+.modal-content {
+  -webkit-animation-name: zoom;
+  -webkit-animation-duration: 0.6s;
+  animation-name: zoom;
+  animation-duration: 0.6s;
 }
 
 @-webkit-keyframes zoom {
-    from {-webkit-transform:scale(0)}
-    to {-webkit-transform:scale(1)}
+  from {-webkit-transform:scale(0)}
+  to {-webkit-transform:scale(1)}
 }
 
 @keyframes zoom {
-    from {transform:scale(0)}
-    to {transform:scale(1)}
-}
-
-/* The Close Button */
-.close {
-    position: absolute;
-    top: 10%;
-    right: 40%;
-    color: #fff;
-    font-size: 40px;
-    font-weight: bold;
-    /*transition: 1s;*/
-    animation-name: zoom;
-    animation-duration: 0.6s;
-}
-
-.close:hover,
-.close:focus {
-    color: #fff;
-    text-decoration: none;
-    cursor: pointer;
+  from {transform:scale(0)}
+  to {transform:scale(1)}
 }
 
 /*
