minor changes. dropdown doesn't work as expected, dropdown menu won't exceed the col-xs-6

--- a/css/styles.css
+++ b/css/styles.css
@@ -133,6 +133,12 @@ div.col-xs-6 {
   padding: 0;
 }
 
+/* set colors for projects button states */
+.open>.dropdown-toggle.btn-primary:hover,
+.open>.dropdown-toggle.btn-primary:focus {
+  background: #286090;
+}
+
 /*
 **************************
 *   end header styling   *
