--- a/views/home.html
+++ b/views/home.html
@@ -13,7 +13,7 @@
     <!-- css file link -->
     <link rel="stylesheet" href="../css/styles.css">
     <!-- Favicon links and meta tags -->
-    <link rel="icon" href="myicon.ico" type="image/x-icon" />
+    <link rel="icon" href="../myicon.ico" type="image/x-icon" />
     <link rel="manifest" href="/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
@@ -30,19 +30,19 @@
           </div>
           <div class="col-xs-6">
             <nav>
-              <!-- div to hold the menu bars -->
               <div class="menu-container">
-                <!-- set up the three menu bars -->
                 <div class="b1"></div>
                 <div class="b2"></div>
                 <div class="b3"></div>
-              </div> <!-- ends menu-container div -->
+              </div>
+
               <ul class="list-inline">
                 <li><a href="home.html" class="btn btn-primary btn-block"><span class="highlight">Home</span></a></li>
                 <li><a href="services.html" class="btn btn-primary btn-block">Services</a></li>
                 <li><a href="about.html" class="btn btn-primary btn-block">About</a></li>
                 <li><a href="projects.html" class="btn btn-primary btn-block">Projects</a></li>
               </ul>
+
             </nav>
           </div> <!-- closes second col-xs-6 div -->
         </div> <!-- closes row div -->
@@ -101,16 +101,15 @@
         </div> <!-- closes row div -->
       </div> <!-- closes container div -->
     </section>
+
     <div id="myModal" class="modal fade" role="dialog">
       <div class="modal-dialog">
-        <!-- <div class="modal-content"> -->
-          <div class="modal-body">
-            <img class="showimage img-responsive" src="" />
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-primary btn-block close_button" data-dismiss="modal">Close</button>
-          </div>
-        <!-- </div> --> <!-- closes modal-content div -->
+        <div class="modal-body">
+          <img class="showimage img-responsive" src="" />
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary btn-block close_button" data-dismiss="modal">Close</button>
+        </div>
       </div> <!-- closes modal-dialog div -->
     </div> <!-- closes modal div -->
 
@@ -131,7 +130,6 @@
     <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
     <!-- bootstrap 3 js script file CDN -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <!-- custom js file -->
-    <script src="../js/main.js"></script>
+    <script src="../js/app.js"></script>
   </body>
 </html>
