Updates favicon reference on each markup page.

--- a/views/about.html
+++ b/views/about.html
@@ -13,7 +13,7 @@
     <!-- css file link -->
     <link rel="stylesheet" href="../css/styles.css">
     <!-- Favicon links and meta tags -->
-    <link rel="icon" href="myicon.ico" type="image/x-icon" />
+    <link rel="icon" href="../myicon.ico" type="image/x-icon" />
     <link rel="manifest" href="/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
